calculator/grammar/CalcPlus.g4
grammar CalcPlus;
calc0   :   expr EOF ;
expr    :   expr op=('*'|'/') expr # MulDiv
        |   expr op=('+'|'-') expr # AddSub
        |   INT                 # Int
        |   VAR                 # Var
        |   '(' expr ')'        # Parens
        ;

calc1   :   (stmt)+ EOF;
stmt    :   VAR '=' expr ';'                    # ExprAssign
        |   VAR '=' 'read' '(' ')' ';'          # ReadAssign
        |   'if' '(' cond ')' thenBlock=block
            ('else' elseBlock=block)?           # IfElse
        |   'write' '(' expr ')' ';'            # Write
        |   'int' VAR (',' VAR)* ';'            # Declare
        |   block                               # StmtBlock
        ;

calc2   :   (stmt)+ EOF;
cond    :   expr cmpOp=('=='|'!='|'>'|'>='|'<'|'<=') expr ;
block   :   '{' (stmt)* '}' ;

calc3   :   (stmt)+ EOF;

calc4   :   (stmt)+ EOF;

WS  : [ \t\r\n]+ -> skip;
INT : [0-9]+ ;
VAR : [A-Za-z]+ ;
